# movilidad-inteligente-nlp

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
artifacts/: text_classifier.joblib
configs/: config.yaml
data/raw/: social_media_preferences.csv
datasets/panama_datasets/: stop_words.csv
notebooks/: 01_eda.ipynb  generated_eda_report.ipynb
reports/metrics/: dataset_summary.json
scripts/: __init__.py  bootstrap.py  etl_build_dataset.py  evaluate_text_classifier.py  generate_eda_reports.py  train_text_classifier.py
src/core/: entities.py
src/infrastructure/events/: __init__.py  priority.py
src/infrastructure/geo/: resolver.py
src/infrastructure/nlp/: category_rules.py  model_builder.py  sentiment_analysis.py  severity.py
src/infrastructure/recommenders/: content_based.py  segments.py
src/infrastructure/reports/: __init__.py  traffic_eda.py
src/interface/web/: app.py
src/movilidad_inteligente_nlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/use_cases/: analyze_sentiment.py  detect_events.py  generate_eda_reports.py  infer_interests.py  recommend_topics.py
src/utils/: logger.py  text_cleaning.py
tests/: conftest.py
tests/infrastructure/geo/: test_resolver.py
tests/integration/: test_pipeline.py  test_recommender_integration.py
tests/unit/: test_age_segmenter.py  test_recommender.py  test_sentiment_analyzer.py  test_text_cleaning.py
tests/unit/use_cases/: test_generate_eda_reports.py
typings/geopy/: __init__.pyi  exc.pyi  location.pyi
typings/geopy/geocoders/: __init__.pyi
(+1 files in other folders)
